<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Splash Screen -->
    <string name="splash_screen">G SPORTS CENTER</string>
    <string name="splash_sub">mobile app</string>
    <string name="splash_web">http://gsc.co.id</string>
    <string name="splash_bottom">By damnedivan at Android Ranah Minang</string>

    <!-- Application Name -->
    <string name="app_name">GSportsCenter</string>
    <string name="app_actionbar_name">Sports Center</string>

    <!-- Layout Title -->
    <string name="title_layout_help">Help</string>
    <string name="title_layout_about">About</string>
    <string name="title_layout_golf">Golf Simulator</string>
    <string name="title_layout_futsal">Futsal</string>
    <string name="title_layout_pool">Swimmingpool &amp; Whirlpool</string>
    <string name="title_layout_badminton">Badminton</string>
    <string name="title_layout_gym">Gym</string>
    <string name="title_layout_aerobic">Aerobic</string>
    <string name="title_layout_pricing">Operational Hours &amp; Pricing</string>
    <string name="title_layout_reservation">Reservation</string>

    <!-- Main Screen -->
    <string name="button_sport_venues">Sport Venues</string>
    <string name="button_sport_classes">Sport Classes</string>
    <string name="button_gpro_shop">G Pro Shop</string>
    <string name="button_zone_cafe">Zone Cafe</string>

    <!-- Action Menu -->
    <string name="action_about">About</string>
    <string name="action_help">Help</string>
    <string name="action_reservation">Reservation</string>
    <string name="action_pricing">Pricing</string>

    <!-- Reservation -->
    <string name="title_text_venues">Pilih venue yang diinginkan:</string>
    <string name="prompt_spinner_venues">Silakan pilih venue</string>
    <string name="title_text_nama">Nama :</string>
    <string name="hint_text_nama">Nama</string>
    <string name="title_text_alamat">Alamat :</string>
    <string name="hint_text_alamat">Alamat</string>
    <string name="title_text_telepon">Nomor telepon :</string>
    <string name="hint_text_telepon">Nomor telepon</string>
    <string name="title_spinner_jam">Jam :</string>
    <string name="prompt_spinner_jam">Silakan pilih jam</string>
    <string name="title_spinner_durasi">Durasi :</string>
    <string name="prompt_spinner_durasi">Silakan pilih durasi</string>
    <string name="title_text_date_picker">Silakan pilih tanggal :</string>
    <string name="button_date_picker">Pilih Jadwal</string>
    
    <!-- Twitter -->
    <string name="button_twitter_login">Login with Twitter</string>
    <string name="title_text_status">Update your status</string>
    <string name="hint_text_status">What\'s on your mind?</string>
    <string name="title_text_update">Update your status</string>
    <string name="button_twitter_tweet">Tweet</string>
    <string name="button_twitter_logout">Logout from Twitter</string>

</resources>