<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/radial_background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TextView
        android:id="@+id/tvSplashTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/splash_screen"
        android:textColor="#CC0000"
        android:textSize="28sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvSplashSub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvSplashTitle"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/splash_sub"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/tvSplashWeb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvSplashSub"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/splash_web"
        android:textColor="@android:color/white" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:gravity="bottom|center"
        android:text="@string/splash_bottom"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        android:textStyle="italic" />

</RelativeLayout>